k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice-app
  labels:
    app.kubernetes.io/part-of: microservice-app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
