k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-app
  namespace: microservice-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: microservice-app.local
      http:
        paths:
          - path: /api/catalogue
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  name: http
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
